# fast_api_articles

./: main.py  pyproject.toml  schemas.py
auth/: oauth2.py
db/: database.py  db_article.py
router/: article.py
