[tool.poetry]
name = "fast-api-article"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fast_api_article"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
sqlalchemy = "^2.0.4"
uvicorn = "^0.20.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-multipart = "^0.0.5"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
